Update JDA && Rewrite role reaction code